[package]
name = "garden"
version = "0.1.4"
edition = "2021"
authors = ["ml <mikeluu089@proton.me>"]
description = "A TUI Pomodoro productivity app with todos and a garden collection."
license = "MIT"
repository = "https://github.com/MikeLuu99/garden"
readme = "README.md"
keywords = ["pomodoro", "productivity", "terminal", "tui", "todos"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tui-big-text = "0.7"
tui-piechart = "=0.2.0"
